# tree-spec-python

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.standalone.md  RELEASING.md  SECURITY.md  __init__.py  builder.py  constants.py  lint.py  models.py  patch.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  publish.yml
docs/: compatibility.md  feedback.md
scripts/: smoke_package.py
tests/: test_boundaries.py  test_contract.py  test_lint.py  test_models_and_builder.py  test_parity_fixtures.py  test_public_exports.py  test_unknown_fields.py
tests/fixtures/: README.md  invalid-duplicate-transition.json  invalid-end-without-outcome.json  invalid-missing-target.json  invalid-missing-transition.json  invalid-non-end-outcome.json  invalid-unreachable-node.json  invalid-unsupported-wire-version.json  invalid-wire-version-boolean.json  minimal-valid.json  moderate-valid.json  valid-implicit-wire-version.json
