[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalsafe-tree-spec"
description = "SignalSafe TreeSpec wire contract for Python: models, parsing, lint, and patch helpers."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "UNLICENSED" }
authors = [
    { name = "Josh Martin" }
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.11.3,<3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "build>=1.2",
    "twine>=6.1",
    "flake8>=7",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/SignalSafeSoftware/tree-spec-python"
Repository = "https://github.com/SignalSafeSoftware/tree-spec-python"
Documentation = "https://github.com/SignalSafeSoftware/tree-spec-python#readme"
Issues = "https://github.com/SignalSafeSoftware/tree-spec-python/issues"

[tool.setuptools]
packages = ["deliveryplus_tree_spec"]
include-package-data = true

[tool.setuptools.package-dir]
deliveryplus_tree_spec = "."

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools.package-data]
deliveryplus_tree_spec = ["py.typed", "VERSION"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=deliveryplus_tree_spec --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["deliveryplus_tree_spec"]
branch = false

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.uv]
package = true
